gloo/manifests/gloo/validatingwebhookconfiguration_gloo-gateway-validation-webhook-gloo-system.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    helm.sh/hook: pre-install, pre-upgrade
    helm.sh/hook-weight: "5"
  labels:
    app: gloo
    gloo: gateway
  name: gloo-gateway-validation-webhook-gloo-system
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: ""
      service:
        name: gloo
        namespace: gloo-system
        path: /validation
    failurePolicy: Fail
    matchPolicy: Exact
    name: gloo.gloo-system.svc
    rules:
      - apiGroups:
          - gateway.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - '*'
      - apiGroups:
          - gloo.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - upstreams
      - apiGroups:
          - gloo.solo.io
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - secrets
    sideEffects: None
